# esp-cryptoauthlib

./: .gitlab-ci.yml  CLAUDE.md  CMakeLists.txt  Kconfig  README.md  generate_component.sh  idf_component.yml
cryptoauthlib/: version.txt
cryptoauthlib/lib/: atca_debug.c
cryptoauthlib/lib/atcacert/: atcacert_der.c  atcacert_host_sw.c
cryptoauthlib/lib/calib/: calib_random.c
cryptoauthlib/lib/hal/: atca_hal.h
cryptoauthlib/lib/mbedtls/: atca_mbedtls_wrap.c  atca_mbedtls_wrap.h
esp_cryptoauth_utility/: README.md  secure_cert_mfg.py
esp_cryptoauth_utility/firmware/: sdkconfig.defaults.esp32c5
esp_cryptoauth_utility/firmware/main/: ecu_console_interface.c  handlers.c  idf_component.yml
esp_cryptoauth_utility/helper_scripts/: serial.py
examples/atecc608_ecdsa/: README.md  sdkconfig.defaults
examples/atecc608_ecdsa/main/: ecdsa_example_main.c
port/: atca_config.h
